--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,20 @@ span{
 p{
     font-size: 16px;
 }
+.box{
+    width: 200px;
+    height: 100px;
+    box-shadow: 4px 4px 4px;
+    padding: 5px 5px;
+    float: left;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    margin-left: 80px;
+    color: gray;
+    background-color: #FBFBFB;
+.title{
+    background-color: #FFEEEE;
+    border: 5px solid red;
+}
