--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body{
     text-align: center;
     position: relative;
     text-align: center;
-    padding-top: 20%;
+    padding-top: 15%;
 }
 .link{
     text-decoration: none;
@@ -98,4 +98,37 @@ span{
     width: 80%;
     margin-left: 500px;
     padding-right: 8%;
+}
+#update{
+    text-align: center;
+    margin: 10%;
+}
+#email{
+    width: 100%;
+    height: 100px;
+    background-color: #FFF4D6;
+    padding-top: 100px;
+    border: 2px solid red;
+}
+#subscribe{
+    text-decoration: none;
+    background-color: brown;
+    padding: 12px 20px 12px;
+    color: azure;
+}
+input{
+    border: 1px solid red;
+    width: 30%;
+    height: 40px;
+}
+#footer{
+    width: 100%;
+    height: 150px;
+    background-color: rgb(46, 45, 45);
+    color: #FFEEEE;
+    text-align: center;
+    padding-top: 50px;
+}
+#Humble{
+    color: rgb(249, 107, 107);
 }
